samples/_failures_safe/1761730802_f9eff6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bad24cb.c: In function ‘main’:
./samples/SAFE/__tmp_8bad24cb.c:160:30: error: expected ‘)’ at end of input
  160 |         if (decompressed.data
      |            ~                 ^
      |                              )
./samples/SAFE/__tmp_8bad24cb.c:160:9: error: expected declaration or statement at end of input
  160 |         if (decompressed.data
      |         ^~
./samples/SAFE/__tmp_8bad24cb.c:160:9: error: expected declaration or statement at end of input
